Update scripts and java options.